--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
   - RAILS_VERSION=5.0
   - RAILS_VERSION=5.1
   - RAILS_VERSION=5.2
+  - RAILS_VERSION=6.1
 
 matrix:
   exclude:
@@ -33,5 +34,7 @@ matrix:
       env: RAILS_VERSION=4.2
     - rvm: 2.6
       env: RAILS_VERSION=5.0
+    - rvm: 2.6
+      env: RAILS_VERSION=6.1
 
 sudo: false
